--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
+    "lint": "./node_modules/.bin/eslint --ignore-path .gitignore . --fix",
     "commit": "git-cz",
     "release": "standard-version"
   },
@@ -26,14 +27,38 @@
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "commitizen": "^4.2.2",
+    "cross-conf-env": "^1.2.1",
+    "cross-env": "^7.0.2",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.12.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
+    "lint-staged": "^10.4.2",
     "standard-version": "^9.0.0"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "./node_modules/.bin/eslint — fix",
+      "git add"
+    ]
   }
 }
