--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,4 +1,4 @@
-name: learn-github-actions
+name: Publish to Docker
 on: [push]
 jobs:
   check-bats-version:
@@ -6,5 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run: npm install -g bats
-      - run: bats -v
+      - uses: docker-practice/actions-setup-docker@master
+      - run: npm ci
+      - run: npm run docker:build
+      - run: npm run docker:publish
