--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -7,6 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - uses: docker-practice/actions-setup-docker@master
+      - run: docker login -u ${{ secrets.ADONIS_DOCKER_USER }} -p ${{ secrets.ADONIS_DOCKER_KEY }}
       - run: npm ci
       - run: npm run docker:build
       - run: npm run docker:publish
