--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cross-conf-env": "^1.2.1",
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "^3.3.0",
+    "danger": "^10.5.0",
     "eslint": "^7.12.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
