--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node index.js",
     "lint": "./node_modules/.bin/eslint --ignore-path .gitignore . --fix",
     "commit": "git-cz",
     "release": "standard-version",
